[WK2][GTK] Fix issues with WebKitFaviconDatabase in debug builds https://bugs.webkit.org/show_bug.cgi?id=97966

Reviewed by Carlos Garcia Campos.

Fix failing ASSERTs detected when running the unit tests from
TestWebKitFaviconDatabase in debug builds.

* UIProcess/API/gtk/WebKitFaviconDatabase.cpp:
(webkitFaviconDatabaseDispose): Close IconDatabase here, which is
the right place to do it according to GObject documentation.
(webkitFaviconDatabaseFinalize): Just destroy the private data
structure and chain up to parent class's finalize method.
(webkit_favicon_database_class_init): Override dispose method.

* UIProcess/API/gtk/tests/TestWebKitFaviconDatabase.cpp:
(webkitFaviconDatabaseFinalizedCallback): Delete files when the
WebKitFaviconDatabase is being finalized, since by that time the
IconDatabase from WebCore will be already closed.
(afterAll): Add a weak reference to WebKitFaviconDatabase and
provide a GWeakNotify callback (webkitFaviconDatabaseFinalizedCallback).

Canonical link: https://commits.webkit.org/115996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129992 268f45cc-cd09-0410-ab3c-d52691b4dbfc